# internal/presentation/oas_response_decoders_gen.go
@@ -14,6 +14,47 @@ import (
 	"github.com/ogen-go/ogen/validate"
 )
 
+func decodeGetReservationInfoResponse(resp *http.Response) (res *ReservationInfo, _ error) {
+	switch resp.StatusCode {
+	case 200:
+		// Code 200.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response ReservationInfo
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
+	}
+	return res, validate.UnexpectedStatusCode(resp.StatusCode)
+}
+
 func decodeGetTrainInfoResponse(resp *http.Response) (res *TrainInfo, _ error) {
 	switch resp.StatusCode {
 	case 200:
@@ -51,6 +92,15 @@ func decodeGetTrainInfoResponse(resp *http.Response) (res *TrainInfo, _ error) {
 		default:
 			return res, validate.InvalidContentType(ct)
 		}
+	}
+	return res, validate.UnexpectedStatusCode(resp.StatusCode)
+}
+
+func decodePatchReservationResponse(resp *http.Response) (res *PatchReservationOK, _ error) {
+	switch resp.StatusCode {
+	case 200:
+		// Code 200.
+		return &PatchReservationOK{}, nil
 	}
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
